Reorganized cofiguration of supported storage systems
Renamed S3 storage class implementation to MinioStorage